src/App.css
.App {
	text-align: center;
	min-width: max-content;
	min-height: max-content;
}
.pane {
	overflow: auto;
}
.light .todo-pane {
	background: beige;
}
.dark .todo-pane{
	background: rgba(0, 0, 0, 0.623);
}
.App.dark {
	color: white;
}
.light .task-pane {
	background: bisque;
}
.dark .task-pane {
	background: rgba(11, 5, 5, 0.623);
}
.todo {
	margin: 6px 1px 6px 40%;
	text-align: left;
}

.todo-completed {
	color: rgb(255, 9, 9);
}
.btn {
	color: white;
	background: url('./image/logo192.png') no-repeat center;
	background-size: 60%;
	border: 2px solid rgb(96, 159, 231);
	border-radius: 5px;
}
.btn:hover {
	background: white url('./image/logo192.png') no-repeat center;
	background-size: 100%;
	border: 2px solid rgb(96, 159, 231);
	border-radius: 5px;
}
.btn-x {
	border: none;
	background: none;
	margin-left: 5px;
	color: rgb(243, 30, 30);
}
.btn-x:hover {
	border: none;
	background: none;
	margin-left: 5px;
	font-size: large;
	color: rgb(255, 134, 134);
}

.task-list {
	text-align: left;
	margin-left: 40%;
}
.input {
	background-color: beige;
	border: none;
	border-bottom: 1px solid slateblue;
}
.input:focus {
	outline: none;
}
#todo-pane-input {
	display: flex;
	justify-content: center;
	align-items: baseline;
}
.App-logo {
	height: 40vmin;
	pointer-events: none;
}
h3:hover {
	animation: color infinite 2s linear;
}
.theme-select {
	position: fixed;
	top: 2%;
	left: 4%;
}

@media (prefers-reduced-motion: no-preference) {
	.App-logo {
		animation: App-logo-spin infinite 20s linear;
	}
}

.App-header {
	background-color: #282c34;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: calc(10px + 2vmin);
	color: white;
}

.App-link {
	color: #61dafb;
}

@keyframes App-logo-spin {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}

@keyframes color {
	0% {
		color: rgb(15, 179, 179);
	}
	50% {
		color: rgb(145, 240, 68);
	}
	100% {
		color: #fc7406;
	}
}

